--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,5 +1,10 @@
 .blue .mdl-navigation__link{
     color: #22ABE8;
+    padding: 0;
+}
+
+.bandoIconeStoreFreeze {
+    width: 65rem;
 }
 
 .red {
@@ -68,4 +73,9 @@
 
 .row {
     margin: auto;
+}
+
+.menuLeft {
+    /* margin: auto; */
+    text-align: center;
 }
