--- a/templates/recipe/create.html.twig
+++ b/templates/recipe/create.html.twig
@@ -40,7 +40,7 @@
                 <br>
                 {{ form_row(form.name) }}
                 <br>
-                {# {{ form_row(form2.name) }} #}
+                {# {{ form_row(form.name) }} #}
                 <br>
                 <tr>
                     <td>
