--- a/templates/order/read.html.twig
+++ b/templates/order/read.html.twig
@@ -10,10 +10,10 @@
     {% include 'baseOpen.html.php' %}
     <div class="backgroundCreate">
 
-        <div class="mdl-tabs__tab-bar">
+        {# <div class="mdl-tabs__tab-bar">
             <a class="mdl-navigation__link mdl-tabs__tab" href="createRecette">Ajouter ?</a>
             <a class="mdl-navigation__link mdl-tabs__tab" href="readRecette">Voir ?</a>
-        </div>
+        </div> #}
 {# <br><br><br> #}
         <section class="paragraphe subtitle read">
             <div class="black">
